--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Sharp" rel="stylesheet">
+  <script async src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
   <%= stylesheet_link_tag "style", "data-turbo-track": "reload" %>
   <title>Freight Management System</title>
 </head>
@@ -17,7 +18,7 @@
     <div class="toggle">
       <div class="logo">
         <img src="<%= asset_path("logo.png") %>">
-        <h2>Freight<span class="danger">MS</span></h2>
+        <h2>KARGADA</h2>
       </div>
       <div class="close" id="close-btn">
             <span class="material-icons-sharp">
@@ -27,32 +28,40 @@
     </div>
 
     <div class="sidebar">
-      <a href="<%= dashboard_page_path %>" class="<%= current_page?(dashboard_page_path) ? 'active' : '' %>">
+      <a href="<%= dashboard_page_path %>" class="<%= (current_page?('/dashboard')) ? 'active' : '' %>">
                     <span class="material-icons-sharp">
                         dashboard
                     </span>
         <h3>Dashboard</h3>
       </a>
-      <a href="<%= dashboard_order_page_path %>" class=" <%= current_page?(dashboard_order_page_path) ? 'active' : '' %> ">
+      <a href="<%= dashboard_shipments_page_path %>"
+         class=" <%= (current_page?('/dashboard_shipments') || controller_name == 'shipments') ? 'active' : '' %>">
                     <span class="material-icons-sharp">
                         local_shipping
                     </span>
-        <h3>Orders</h3>
+        <h3>Shipments</h3>
       </a>
-      <a href="#">
+      <a href="<%= dashboard_warehouses_page_path %> class="<%= (controller_name == 'dashboard' || controller_name == 'warehouses') ? 'active' : '' %>">
                     <span class="material-icons-sharp">
-                        map
+                        warehouse
                     </span>
-        <h3>Ports</h3>
+        <h3>Warehouses</h3>
       </a>
-      <a href="#">
+      <a href="<%= dashboard_loads_page_path %> class="<%= (controller_name == 'dashboard' || controller_name == 'loads') ? 'active' : '' %>">
                     <span class="material-icons-sharp">
-                        inventory
+                        inventory_2
                     </span>
-        <h3>Products</h3>
+        <h3>Loads</h3>
+      </a>
+      <a href="<%= dashboard_fleet_page_path %> class="<%= (controller_name == 'dashboard' || controller_name == 'fleet') ? 'active' : '' %>">
+                <span class="material-icons-sharp">
+                directions_car
+                </span>
+        <h3>Fleet</h3>
       </a>
       <li>
-        <%= link_to "Sign out", destroy_path, method: :delete, class: "dropdown-item" %>
+
+        <%= link_to "Sign out", destroy_path, method: :delete %>
       </li>
     </div>
   </aside>
