--- a/app/views/dashboard/shipments.html.erb
+++ b/app/views/dashboard/shipments.html.erb
@@ -1,5 +1,8 @@
 <div class="recent-orders">
   <h2>Shipments</h2>
+  <div style="width: 15%;">
+    <a href="<%= new_shipment_path %>" class="button" style="color: white;">Create Shipment</a>
+  </div>
   <table>
     <thead>
     <tr>
