--- a/app/views/shipments/new.html.erb
+++ b/app/views/shipments/new.html.erb
@@ -5,5 +5,5 @@
 <br>
 
 <div>
-  <%= link_to "Back to shipments", shipments_path %>
+  <%= link_to "Back to shipments", dashboard_shipments_page_path %>
 </div>
