--- a/app/views/shipments/_form.html.erb
+++ b/app/views/shipments/_form.html.erb
@@ -15,7 +15,7 @@
       <div class="order_details">
         <h2>Shipment Details</h2>
         <%= form.label :"Status" %>
-        <%= select_tag 'status', options_for_select([['New', 'new'], ['Ongoing', 'ongoing'], ['Delivered', 'delivered']], params[:status]), class: 'input-field' %>
+        <%= select_tag 'status', options_for_select([['Pending', 'pending'], ['In Progress', 'in_progress'], ['Cancelled', 'cancelled'], ['Completed', 'completed']], params[:status]), class: 'input-field' %>
         <%= form.label :"Shipment_date"%>
         <%= form.date_field :shipment_date, class:"input-field" %>
         <%= form.label :"From Warehouse" %>
