--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -41,7 +41,7 @@
                     </span>
         <h3>Shipments</h3>
       </a>
-      <a href="<%= dashboard_warehouses_page_path %> class="<%= (controller_name == 'dashboard' || controller_name == 'warehouses') ? 'active' : '' %>">
+      <a href="<%= dashboard_warehouses_page_path %>" class="<%= (controller_name == 'dashboard' || controller_name == 'warehouses') ? 'active' : '' %>">
                     <span class="material-icons-sharp">
                         warehouse
                     </span>
