--- a/app/views/shipments/_form.html.erb
+++ b/app/views/shipments/_form.html.erb
@@ -48,3 +48,10 @@
   </div>
 
 <% end %>
+<div>
+  <%= link_to "Edit this shipment", edit_shipment_path(@shipment) %> |
+  <%= link_to "Back to shipments", dashboard_shipments_page_path %>
+
+  <%= button_to "Destroy this Shipment", @shipment, method: :delete %>
+</div>
+
