--- a/app/views/warehouses/_form.html.erb
+++ b/app/views/warehouses/_form.html.erb
@@ -19,12 +19,12 @@
         <%= form.text_field :name, class:"input-field" %>
         <%= form.label :"Address"%>
         <%= form.text_field :address, class:"input-field" %>
-        <%= form.label :"Latitude"%>
-        <%= form.number_field :latitude, class:"input-field" %>
+        <%= form.label :"Latitude"%> s
+        <%= form.text_field :latitude, class:"input-field" %>
         <%= form.label :"Longitude"%>
-        <%= form.number_field :latitude, class:"input-field" %>
+        <%= form.text_field :longitude, class:"input-field" %>
         <%= form.label :"Capacity"%>
-        <%= form.number_field :latitude, class:"input-field" %>
+        <%= form.text_field :capacity, class:"input-field" %>
 
         <br>
         <br>
