--- a/app/views/shared/_dashboard.html.erb
+++ b/app/views/shared/_dashboard.html.erb
@@ -17,7 +17,7 @@
   <aside>
     <div class="toggle">
       <div class="logo">
-        <img src="<%= asset_path("logo.png") %>">
+        <img src="<%= asset_path("logo.png") %>" style="width: fit-content;">
         <h2>KARGADA</h2>
       </div>
       <div class="close" id="close-btn">
@@ -53,11 +53,18 @@
                     </span>
         <h3>Loads</h3>
       </a>
-      <a href="<%= dashboard_fleet_page_path %> class="<%= (current_page?('/dashboard_fleet') || controller_name == 'fleet') ? 'active' : '' %>">
+      <a href="<%= dashboard_fleet_page_path %> class="<%= (current_page?('/dashboard_vehicles') || controller_name == 'fleet') ? 'active' : '' %>">
                 <span class="material-icons-sharp">
                 directions_car
                 </span>
-        <h3>Fleet</h3>
+        <h3>Vehicles</h3>
+      </a>
+      </a>
+      <a href="<%= dashboard_drivers_page_path %> class="<%= (current_page?('/dashboard_drivers') || controller_name == 'driver') ? 'active' : '' %>">
+      <span class="material-icons-sharp">
+                person
+                </span>
+      <h3>Drivers</h3>
       </a>
       <li>
 
