--- a/app/views/warehouses/_form.html.erb
+++ b/app/views/warehouses/_form.html.erb
@@ -31,6 +31,10 @@
         <%= form.submit class:"button" %>
       </div>
     </div>
+    <div class="row">
+      <%= link_to "Show this warehouse", @warehouse %>
+      <%= link_to "Back to warehouses", dashboard_warehouses_page_path %>
+    </div>
   </div>
 
 <% end %>
