--- a/app/views/warehouses/show.html.erb
+++ b/app/views/warehouses/show.html.erb
@@ -1,9 +1,6 @@
 <p style="color: green"><%= notice %></p>
 
-
-
-
-<p style="color: green"><%= notice %></p>
+<%= render @warehouse %>
 <div class="order_form">
   <h1>Warehouse ID: <%= @warehouse.id %></h1>
   <div class="row">
@@ -16,14 +13,14 @@
       <h3>Capacity:<strong><%=  @warehouse.capacity %></strong></h3>
     </div>
   </div>
+  <div class="row">
+    <%= link_to "Edit this warehouse", edit_warehouse_path(@warehouse) %>
+    <%= link_to "Back to warehouses", dashboard_warehouses_page_path %>
 
+    <%= button_to "Destroy this warehouse", @warehouse, method: :delete %>
+  </div>
 </div>
 
-<%= render @warehouse %>
 
-<div>
-  <%= link_to "Edit this warehouse", edit_warehouse_path(@warehouse) %> |
-  <%= link_to "Back to warehouses", dashboard_warehouses_page_path %>
 
-  <%= button_to "Destroy this warehouse", @warehouse, method: :delete %>
-</div>
+
