--- a/app/views/fms_g16_shipments/_form.html.erb
+++ b/app/views/fms_g16_shipments/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <div class="order_form">
+<!--  <div class="order_form">-->
     <div class="row">
       <div class="order_details">
         <h2>Shipment Details</h2>
@@ -42,10 +42,10 @@
         <%= form.submit "Save Shipment", class:"button" %>
       </div>
     </div>
-    <div class="row">
-      <%= link_to "Show this Shipment", @fms_g16_shipment %>
-      <%= link_to "Back to Shipment", dashboard_loads_page_path %>
-    </div>
-  </div>
+<!--    <div class="row">-->
+      <%#= link_to "Show this Shipment", @fms_g16_shipment %>
+      <%#= link_to "Back to Shipment", dashboard_loads_page_path %>
+<!--    </div>-->
+<!--  </div>-->
 
 <% end %>
