--- a/app/views/fms_g16_shipments/_add_load.html.erb
+++ b/app/views/fms_g16_shipments/_add_load.html.erb
@@ -1,12 +1,4 @@
-<p style="color: green"><%= notice %></p>
-<div class="recent-orders">
-  <h2>Loads</h2>
-  <div class="d-flex pb-5" style="width: 15%;">
-    <button data-modal-target="default-modal" data-modal-toggle="default-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-      Create Loads
-    </button>
-  </div>
-  <div class="flex flex-col w-100">
+ <div class="flex flex-col w-100">
     <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
       <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
         <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
@@ -34,7 +26,7 @@
             </tr>
             </thead>
             <tbody class="bg-white divide-y divide-gray-200">
-            <% @fms_g16_loads.each do |load| %>
+            <% fms_g16_loads_available.each do |load| %>
               <tr>
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="flex items-center">
@@ -48,9 +40,9 @@
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="text-sm text-gray-500 text-center">
                     <% if load.fms_g16_shipment&.id != nil %>
-                    <%= load.fms_g16_shipment.name %>
-                      <% else %>
-                    <%= 'n/a' %>
+                      <%= load.fms_g16_shipment.name %>
+                    <% else %>
+                      <%= 'n/a' %>
                     <% end %>
                   </div>
                 </td>
@@ -71,7 +63,7 @@
                 </td>
                 <td class="px-6 py-4 whitespace-nowrap">
                   <div class="text-sm text-gray-500">
-                    <%= link_to 'View More', fms_g16_load_path(load.id) %>
+                    <%= button_to 'Consolidate to Shipment', assign_load_fms_g16_shipment_path(@fms_g16_shipment, fms_g16_load_id: load.id), class:"block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800", remote: true, confirm: 'Are you sure?' %>
                   </div>
                 </td>
               </tr>
@@ -83,30 +75,4 @@
       </div>
     </div>
   </div>
-</div>
 <!-- Modal toggle -->
-
-<!-- Main modal -->
-<div id="default-modal" tabindex="-1" aria-hidden="true" class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
-  <div class="relative p-4 w-full max-w-2xl max-h-full">
-    <!-- Modal content -->
-    <div class="relative bg-white rounded-lg shadow dark:bg-gray-700">
-      <!-- Modal header -->
-      <div class="flex items-center justify-between p-4 md:p-5 border-b rounded-t dark:border-gray-600">
-        <h3 class="text-xl font-semibold text-gray-900 dark:text-white">
-          Create Load
-        </h3>
-        <button type="button" class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm w-8 h-8 ms-auto inline-flex justify-center items-center dark:hover:bg-gray-600 dark:hover:text-white" data-modal-hide="default-modal">
-          <svg class="w-3 h-3" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 14 14">
-            <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="m1 1 6 6m0 0 6 6M7 7l6-6M7 7l-6 6"/>
-          </svg>
-          <span class="sr-only">Close modal</span>
-        </button>
-      </div>
-      <!-- Modal body -->
-      <div class="p-4 md:p-5 space-y-4">
-        <%= render "form", fms_g16_load: @fms_g16_load %>
-      </div>
-    </div>
-  </div>
-</div>
