--- a/app/views/dashboard/shipments.html.erb
+++ b/app/views/dashboard/shipments.html.erb
@@ -1,6 +1,6 @@
 <div class="recent-orders">
   <h2>Shipments</h2>
-  <div style="width: 15%;">
+  <div class="d-flex pb-1" style="width: 15%;">
     <a href="<%= new_fms_g16_shipment_path %>" class="button" style="color: white;">Create Shipment</a>
   </div>
   <table>
