--- a/app/views/fms_g16_shipments/index.html.erb
+++ b/app/views/fms_g16_shipments/index.html.erb
@@ -1,35 +1,77 @@
 <p style="color: green"><%= notice %></p>
 <div class="recent-orders">
   <h2>Shipments</h2>
-  <div style="width: 15%;">
+  <div class="d-flex pb-5" style="width: 15%;">
     <button data-modal-target="default-modal" data-modal-toggle="default-modal" class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800" type="button">
-      Create Shipment
+      Create Shipments
     </button>
   </div>
-  <table>
-    <thead>
-    <tr>
-      <th>Shipments ID</th>
-      <th>Start Date</th>
-      <th>End Date</th>
-      <th>Vehicle</th>
-      <th>Status</th>
-      <th></th>
-    </tr>
-    </thead>
-    <tbody>
-    <% @fms_g16_shipments.each do |shipment| %>
-      <tr>
-        <td><%= link_to shipment.id, fms_g16_shipment_path(shipment.id) %></td>
-        <td><%= shipment.start_date %></td>
-        <td><%= shipment.end_date %></td>
-        <td><%= shipment.vehicle %></td>
-        <td><%= shipment.status %></td>
-      </tr>
-    <% end %>
-    </tbody>
-  </table>
-</div>
+  <div class="flex flex-col w-100">
+    <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
+      <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
+        <div class="shadow overflow-hidden border-b border-gray-200 sm:rounded-lg">
+          <table class="min-w-full divide-y divide-gray-200">
+            <thead class="bg-gray-50">
+            <tr>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Shipment Ref#:
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Start Date
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                End Date
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Vehicle
+              </th>
+              <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                Status
+              </th>
+            </tr>
+            </thead>
+            <tbody class="bg-white divide-y divide-gray-200">
+            <% @fms_g16_shipments.each do |shipment| %>
+            <tr>
+              <td class="px-6 py-4 whitespace-nowrap">
+                <div class="flex items-center">
+                  <div class="ml-4">
+                    <div class="text-sm font-medium text-gray-900 text-center">
+                      <p class="text-center"><%= link_to shipment.name, fms_g16_shipment_path(shipment.id) %></p>
+                    </div>
+                  </div>
+                </div>
+              </td>
+              <td class="px-6 py-4 whitespace-nowrap">
+                <div class="text-sm text-gray-500 text-center">
+                  <%= shipment.start_date %>
+                </div>
+              </td>
+              <td class="px-6 py-4 whitespace-nowrap">
+                <div class="text-sm text-gray-500">
+                  <%= shipment.end_date %>
+                </div>
+              </td>
+              <td class="px-6 py-4 whitespace-nowrap">
+                <div class="text-sm text-gray-500">
+                  <%= shipment.vehicle %>
+                </div>
+              </td>
+              <td class="px-6 py-4 whitespace-nowrap">
+                <span class="px-2 inline-flex text-xs leading-5 font-semibold rounded-full bg-green-100 text-green-800">
+                  <%= shipment.status %>
+                </span>
+              </td>
+            </tr>
+              <% end %>
+            <!-- More rows can be added here -->
+            </tbody>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
+
 <!-- End of Recent Orders -->
 <!-- Modal toggle -->
 
@@ -60,4 +102,5 @@
       </div>
     </div>
   </div>
+</div>
 </div>
